# sxc-vector

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  vector.c  vector.h
source/archive/: vector_char.c  vector_char.h  vector_int.c  vector_int.h
tests/: CMakeLists.txt  tests_init.c  tests_main.c  tests_push.c  tests_set.c  tests_vector_create.c  tests_vector_init.c  tests_vector_reserve.c
tests/archive/: CMakeLists.txt  tests_get.c  tests_init.c  tests_size.c
